<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_margin="@dimen/horizental_margin"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/padding_global"
            android:paddingEnd="@dimen/padding_right"
            android:paddingStart="@dimen/padding_global"
            android:paddingTop="@dimen/padding_global"
            android:layout_height="@dimen/card_height"
            android:background="@drawable/card"
            android:orientation="vertical"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card"
                android:orientation="horizontal"
        >
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:background="@drawable/image_radius"
                    app:cardElevation="0dp"
            >
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/image_radius"
                        android:src="@drawable/profile"/>
            </androidx.cardview.widget.CardView>

            <View android:layout_width="12dp" android:layout_height="match_parent"/>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="vertical"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_title"
                        android:layout_marginBottom="@dimen/seperate_items"
                        android:fontFamily="@font/dmsans_bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_profession"
                        android:alpha="0.87"
                        android:textColor="@color/subtitle"
                        android:textSize="@dimen/text_subtitle"
                        android:layout_marginBottom="@dimen/seperate_items"
                        android:fontFamily="@font/dmsans_medium"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                >
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/location"
                            android:contentDescription="location"/>
                    <View android:layout_width="4dp" android:layout_height="match_parent"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uk"
                            android:alpha="0.6"
                            android:textColor="#263238"
                            android:textSize="@dimen/text_subtitle2"
                            android:fontFamily="@font/dmsans_regular"/>
                </LinearLayout>
                <View android:layout_width="match_parent" android:layout_height="@dimen/seperate_vertical_items"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/review"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_subtitle"
                            android:layout_marginEnd="@dimen/seperate_sub_items"
                            android:fontFamily="@font/dmsans_medium"/>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                    >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/review_rate"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_subtitle"
                                android:fontFamily="@font/dmsans_medium"/>
                        <View android:layout_width="@dimen/small_seperate" android:layout_height="match_parent"/>
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/star"
                                android:contentDescription="star"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent"/>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="right"
                          tools:ignore="RtlHardcoded">
                <LinearLayout
                        android:layout_width="38dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:background="@drawable/time_in_hours"
                >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hours"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_subtitle"
                            android:fontFamily="@font/dmsans_regular"/>
                </LinearLayout>
                <View android:layout_width="match_parent" android:layout_height="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_country"
                        android:alpha="0.87"
                        android:textColor="@color/subtitle"
                        android:textSize="@dimen/text_subtitle"
                        android:layout_marginBottom="@dimen/seperate_vertical_items"
                        android:fontFamily="@font/dmsans_medium"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:alpha="0.38"
                        android:textColor="#122940"
                        android:textSize="@dimen/text_subtitle"
                        android:fontFamily="@font/dmsans_regular"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>